# dphpc

./: .gitignore  .gitmodules  .sync-exclude.lst  CMakeLists.txt  README.md  container_build.sh
data/: adj_list_small_graph.txt
plots/: plotloader.py  plotstyle.py  requirements.txt  runtime_plot.py  scraper.py  speedup_plot.py  test.py
plots/data/: abs_runtime.csv  abs_runtime.json  acos_runtime.csv  acos_runtime.json  acosh_runtime.csv  acosh_runtime.json  add_runtime.csv  add_runtime.json  argmax_runtime.csv  argmax_runtime.json  asinh_runtime.csv  asinh_runtime.json  batchnorm_frep_runtime.csv  batchnorm_frep_runtime.json  batchnorm_runtime.csv  batchnorm_runtime.json  batchnorm_ssr_runtime.csv  batchnorm_ssr_runtime.json  benchmark_runtime.csv  benchmark_runtime.json  conv2d_runtime.json  conv_runtime.json  copy_runtime.csv  copy_runtime.json  cumsum_runtime.csv  cumsum_runtime.json  div_runtime.csv  div_runtime.json  dot_runtime.csv  dot_runtime.json  dropout_runtime.csv  dropout_runtime.json  gemm_runtime.json  masked_dropout_runtime.csv  masked_dropout_runtime.json  max_runtime.csv  max_runtime.json  maxpool2d_runtime.json  maxpool_runtime.json  mem_versus_l1_runtime.csv  (+12 more)
report/: README.txt  bibl_conf.bib  report-word.doc  report.tex
scripts/: bench.sh  env.sh
src/: generator.cpp  generator.hpp  main.cpp  main.h  main.hpp  test.cpp  test.hpp  util.cpp  util.hpp
src/benchmark/: benchmark.h  benchmark_abs.c  benchmark_acos.c  benchmark_acosh.c  benchmark_add.c  benchmark_and.c  benchmark_argmax.c  benchmark_asinh.c  benchmark_batchnorm.c  benchmark_batchnorm_frep.c  benchmark_batchnorm_ssr.c  benchmark_conv.c  benchmark_conv2d.c  benchmark_copy.c  benchmark_cumsum.c  benchmark_div.c  benchmark_dot.c  benchmark_dropout.c  benchmark_exp.c  benchmark_gemm.c  benchmark_masked_dropout.c  benchmark_max.c  benchmark_maxpool.c  benchmark_maxpool2d.c  benchmark_mem_versus_l1.c  benchmark_parallel_add.c  benchmark_relu.c  benchmark_scatter.c  benchmark_sigmoid.c  benchmark_sin.c  benchmark_sum.c  benchmark_transpose.c  benchmark_unique.c
src/bugs/: ssr_anomaly.c  ssr_spilling.c
src/copy/: copy.c  copy.h
src/debug-multicore/: main.c
src/dot/: dot.c  dot.h
src/hello_world/: main.c  ssr_anomaly.c
src/include/: lmq.h
src/lmq/: lmq.c  lmq.h
src/onnx/: abs.c  abs.h  acos.c  acos.h  acosh.c  acosh.h  add.c  add.h  add_baseline.c  argmax.c  argmax.h  asinh.c  asinh.h  batchnorm.c  conv.c  cumsum.c  cumsum.h  div.c  div.h  dropout.c  dropout.h  gemm.c  gemm.h  masked_dropout.c  masked_dropout.h  max.c  max.h  maxpool.c  parallel_add.c  parallel_add.h  relu.c  relu.h  scatter.c  scatter.h  sigmoid.c  sigmoid.h  sin.c  sin.h  sum.c  sum.h  (+7 more)
src/x86/: main.c
